--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
-    "next-auth": "^4.24.13",
+    "mysql2": "^3.15.3",
+    "next": "^16.0.8",
+    "nodemailer": "^7.0.11",
+    "pg-hstore": "^2.3.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "autoprefixer": "^10.4.22",
     "babel-plugin-react-compiler": "1.0.0",
-    "bcryptjs": "^2.4.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
     "postcss": "^8.5.6",
